# frugalchainsaw

./: .gitignore  README.md  entry_point.py  environment.yml  pyproject.toml  pytest.ini  run_eval.py  run_infer.py  run_plot.py  run_train.py
configs/: baseline.yaml  baselinebhalf.yaml  baselinedeep.yaml  baselinehalf.yaml  baselinehalf25.yaml  baselinehalfaugment.yaml  baselinemedium.yaml  warmup_cosine.yaml
scripts/: benchmark.py  prep_data.py  setup.sh
src/: dataset.py  logger.py  model.py  train.py  utils.py
tests/: conftest.py  test_dataloader.py  test_logger.py  test_model.py  test_train.py  test_utils.py
