[project]
name = "frugalchainsaw"
version = "0.1.0"
description = "Detecting chainsaws in audio"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "equinox>=0.11.11",
    "jax>=0.5.0",
    "jaxtyping>=0.2.36",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.1.3",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "pyrallis>=0.3.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "typeguard==2.13.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

